--- a/doc/trunk/design/syn/S02.pod
+++ b/doc/trunk/design/syn/S02.pod
@@ -523,7 +523,7 @@ integer.  Bitwise operations on a C<Str> generally fail unless the
 C<Str> in question can provide an abstract C<Buf> interface somehow.
 Coercion to C<Buf> should generally invalidate the C<Str> interface.
 As a generic type C<Buf> may be instantiated as (or bound to) any
-of C<buf8>, C<buf16>, or C<buf32> (or to any type that provide the
+of C<buf8>, C<buf16>, or C<buf32> (or to any type that provides the
 appropriate C<Buf> interface), but when used to create a buffer C<Buf>
 defaults to C<buf8>.
 
@@ -1033,7 +1033,7 @@ failure.
 Any lexical declared with the C<is context> trait is by default
 considered readonly outside the current lexical scope.  You may add
 C<is rw> to allow called routines to modify your value.  C<$_>,
-C<$!> and C<$/> are C<rw> by default.  In any event, your lexical
+C<$!>, and C<$/> are C<rw> by default.  In any event, your lexical
 scope can always access the variable as if it were an ordinary C<my>;
 the restriction on writing applies only to called subroutines.
 
@@ -1759,7 +1759,7 @@ If a postdeclaration is not seen, the compile fails at C<CHECK> time.
 (You are still free to predeclare subroutines explicitly, of course.)
 The postdeclaration may be in any lexical or package scope that
 could have made the declaration visible to the provisional call had the
-declaration occurred before rather than after than the provisional
+declaration occurred before rather than after the provisional
 call.
 
 This fixup is done only for provisional calls.  If there
@@ -2167,7 +2167,7 @@ Here are the current grammatical categories:
     infix:<+>                                   $x + $y
     postfix:<++>                                $x++
     circumfix:<[ ]>                             [ @x ]
-    postcircumfix:<[ ]>                         $x[$y] or $x .[$y]
+    postcircumfix:<[ ]>                         $x[$y] or $x.[$y]
     regex_metachar:<,>                          /,/
     regex_backslash:<w>                         /\w/ and /\W/
     regex_assertion:<*>                         /<*stuff>/
